Small pom.xml Fixes